background image not showing after previous changes, now fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ hr {
 /* event times */
 
 #times {
-    background-image: url('../images/times-background.webp');
+    background-image: url('../images/dublin-city.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
